# data_science_use_cases

./: README.md  pyproject.toml
CaliforniaHousin/: model.ipynb
Iris/: explore_data.ipynb  k-nearest_model.ipynb  linear_multiclass.ipynb
WineQuality/: linear_models.ipynb  linear_regression.ipynb  tree_models.ipynb
WisconsinBreastCancer/: 01_explore_data.ipynb  03_tree_models.ipynb  04_xgboost.ipynb  05_SVM.ipynb  06_MLP.ipynb  linear_models.ipynb  model.ipynb  tree_models.ipynb
src/utils/: plotting.py
